Add images, links to projects

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.png" alt="" /></a>
+									<a href="https://infinotes.herokuapp.com/" class="image"><img src="images/pic01.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Infinotes</h2>
 										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="https://github.com/jubby2000/infinotes" class="special">View the code</a>
 									</div>
 								</div>
 							</section>
@@ -65,11 +65,11 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.png" alt="" /></a>
+									<a href="https://jubby2000.github.io/flappy-bars/" class="image"><img src="images/pic02.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Flappy Bars</h2>
 										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="https://github.com/jubby2000/flappy-bars" class="special">View the code</a>
 									</div>
 								</div>
 							</section>
@@ -77,18 +77,18 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.png" alt="" /></a>
+									<a href="https://assistant.google.com/services/a/uid/000000feb44cf4d8?hl=en" class="image"><img src="images/pic03.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">CodeUp Trivia</h2>
 										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="https://github.com/jubby2000/code-up" class="special">View the code</a>
 									</div>
 								</div>
 							</section>
 
 							<section id="four" class="wrapper alt spotlight style4">
 								<div class="inner">
-									<a href="#" class="image">
+									<a href="https://play.google.com/store/apps/details?id=com.the_closing_speaker" class="image">
 										<img src="images/pic04.png" alt="" />
 									</a>
 									<div class="content">
@@ -96,7 +96,7 @@
 										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere
 											urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex
 											nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="https://github.com/jubby2000/the-closing-speaker" class="special">View the code</a>
 									</div>
 								</div>
 							</section>
