Adjust contact options

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>I'd love to hear from you! Let me know what you and your team are working on, or any feedback on my projects, and I'll get back to you.</p>
-							<form method="post" action="mailto:jacob.b.barlow@gmail.com">
+							<!-- <form method="post" action="mailto:jacob.b.barlow@gmail.com">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -229,7 +229,7 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</form>
+							</form> -->
 							<ul class="contact">
 								<!-- <li class="fa-home">
 									Untitled Inc<br />
@@ -237,7 +237,7 @@
 									Nashville, TN 00000-0000
 								</li> -->
 								<!-- <li class="fa-phone">(000) 000-0000</li> -->
-								<!-- <li class="fa-envelope"><a href="#">information@untitled.tld</a></li> -->
+								<li class="fa-envelope"><a href="mailto:jacob.b.barlow@gmail.com">jacob.b.barlow@gmail.com</a></li>
 								<li class="fa-linkedin"><a href="https://www.linkedin.com/in/jacobbbarlow/">linkedin.com/in/jacobbbarlow</a></li>
 								<li class="fa-github"><a href="https://github.com/jubby2000/">github.com/jubby2000</a></li>
 								<li class="fa-stack-overflow"><a href="https://stackoverflow.com/users/4151220/jacob">stackoverflow.com/users/4151220/jacob</a></li>
