Point CodeUp to demo site

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="https://assistant.google.com/services/a/uid/000000feb44cf4d8?hl=en" class="image"><img src="images/pic03.png" alt="" /></a>
+									<a href="https://jubby2000.github.io/code-up/" class="image"><img src="images/pic03.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">CodeUp Trivia</h2>
 										<p>Google Assistant Code Training and Trivia. Learn about languages like Ruby, JavaScript, SQL, HTML and CSS. CodeUp Trivia begins a conversation with you, offers trivia questions related to the language of your choice. Node.js, Firebase, Dialogflow, and Actions on Google walked into a bar together to make this happen. Try it now in Google Assistant by saying: "Okay Google, talk to CodeUp Trivia"</p>
