Add phone number, projects title, formatting

--- a/index.html
+++ b/index.html
@@ -60,13 +60,31 @@
 
 				<!-- Wrapper -->
 					<section id="wrapper">
+						
+						<!-- Title -->
+						<section id="zero" class="wrapper alt style2">
+							<div class="inner">
+								<h2>Current Projects</h2>
+								<!-- <a href="https://infinotes.herokuapp.com/" class="image">
+									<img src="images/pic01.png" alt="" />
+								</a>
+								<div class="content">
+									<h2 class="major">
+										<a href="https://infinotes.herokuapp.com/">Infinotes</a>
+									</h2>
+									<p>Note-taking inspired by Evernote. Created using React and Redux for the frontend, and Rails on the backend. It also utilizes
+										Animate.css and Quill libraries for all you design folks out there. Ten days, start to finish.</p>
+									<a href="https://github.com/jubby2000/infinotes" class="special">View the code</a>
+								</div>
+							</div> -->
+						</section>
 
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
 									<a href="https://infinotes.herokuapp.com/" class="image"><img src="images/pic01.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Infinotes</h2>
+										<h2 class="major"><a href="https://infinotes.herokuapp.com/">Infinotes</a></h2>
 										<p>Note-taking inspired by Evernote. Created using React and Redux for the frontend, and Rails on the backend. It also utilizes Animate.css and Quill libraries for all you design folks out there. Ten days, start to finish.</p>
 										<a href="https://github.com/jubby2000/infinotes" class="special">View the code</a>
 									</div>
@@ -78,7 +96,7 @@
 								<div class="inner">
 									<a href="https://jubby2000.github.io/flappy-bars/" class="image"><img src="images/pic02.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Flappy Bars</h2>
+										<h2 class="major"><a href="https://jubby2000.github.io/flappy-bars/">Flappy Bars</a></h2>
 										<p>An A/V twist for the classic challenging game Flappy Bird. Music is visualized with colored bars built using vanilla JavaScript and Canvas. When those bars appear, they serve as the bounds for how high or low the bird can fly. It maintains the challenging nature of the original game - beat my high score of 79!</p>
 										<a href="https://github.com/jubby2000/flappy-bars" class="special">View the code</a>
 									</div>
@@ -90,7 +108,7 @@
 								<div class="inner">
 									<a href="https://jubby2000.github.io/code-up/" class="image"><img src="images/pic03.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">CodeUp Trivia</h2>
+										<h2 class="major"><a href="https://jubby2000.github.io/code-up/">CodeUp Trivia</a></h2>
 										<p>Google Assistant Code Training and Trivia. Learn about languages like Ruby, JavaScript, SQL, HTML and CSS. CodeUp Trivia begins a conversation with you, offers trivia questions related to the language of your choice. Node.js, Firebase, Dialogflow, and Actions on Google walked into a bar together to make this happen. Try it now in Google Assistant by saying: "Okay Google, talk to CodeUp Trivia"</p>
 										<a href="https://github.com/jubby2000/code-up" class="special">View the code</a>
 									</div>
@@ -103,7 +121,7 @@
 										<img src="images/pic04.png" alt="" />
 									</a>
 									<div class="content">
-										<h2 class="major">The Closing Speaker</h2>
+										<h2 class="major"><a href="https://play.google.com/store/apps/details?id=com.the_closing_speaker">The Closing Speaker</a></h2>
 										<p>Curated quotes delivered via topic or author. Now in the Play Store and installed in 65+ countries. Built with Java and Android Studio, now using Firebase for storage (previously SQLite).</p>
 										<a href="https://github.com/jubby2000/the-closing-speaker" class="special">View the code</a>
 									</div>
@@ -247,7 +265,7 @@
 									1234 Somewhere Road Suite #2894<br />
 									Nashville, TN 00000-0000
 								</li> -->
-								<!-- <li class="fa-phone">(000) 000-0000</li> -->
+								<li class="fa-phone"><a href="tel:+18183966604">(818) 396-6604</a></li>
 								<li class="fa-envelope"><a href="mailto:jacob.b.barlow@gmail.com">jacob.b.barlow@gmail.com</a></li>
 								<li class="fa-linkedin"><a href="https://www.linkedin.com/in/jacobbbarlow/">linkedin.com/in/jacobbbarlow</a></li>
 								<li class="fa-github"><a href="https://github.com/jubby2000/">github.com/jubby2000</a></li>
